--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,5 +2,5 @@
 ---
 deployment:
   tasks:
-    - export DEPLOYPATH=/home/ui0it7ugrg9a/public_html/resume.rockoftheearth.com
+    - export DEPLOYPATH=/home/ui0it7ugrg9a/public_html/resume
     - /bin/cp -R * $DEPLOYPATH
